Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -34,9 +34,11 @@
 <p>Just some questions and answers I want to keep around. I don't want it to be as heavy as blog. You might find some answers here. If you find this page is too long to read, try using find(Ctrl+F).</p>
 
 <h4>
-<a id="1-why-linux-man-pages-are-not-complete" class="anchor" href="#1-why-linux-man-pages-are-not-complete" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>1. Why linux man pages are not complete?</h4>
+<a id="1-how-come-my-linux-man-pages-are-not-complete" class="anchor" href="#1-how-come-my-linux-man-pages-are-not-complete" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>1. How come my linux man pages are not complete?</h4>
 
-<p>try update mandb, issue mandb command with root privilidge.</p>
+<p>try update mandb, issue <code>mandb</code> command with root privilidge.</p>
+
+<p><code>sudo mandb</code></p>
 
 <h4>
 <a id="2-how-to-use-automake-and-autoconf" class="anchor" href="#2-how-to-use-automake-and-autoconf" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>2. How to use automake and autoconf?</h4>
