Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -192,7 +192,12 @@ hello_SOURCES = hello.c
 
 <p><code>grep -nrw &lt;FOLDER_NAME&gt; -e "STRING"</code> eg:</p>
 
-<p><code>grep -nrw &lt;&gt;</code></p>
+<p><code>grep -nrw . -e name</code></p>
+
+<h4>
+<a id="6-gcc-on-fedora-64bit-doesnt-compile-32bit-program" class="anchor" href="#6-gcc-on-fedora-64bit-doesnt-compile-32bit-program" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>6. gcc on Fedora 64bit doesn't compile 32bit program?</h4>
+
+<p><code>#sudo dnf install -y glibc-devel.i686 libgcc.i686</code> </p>
       </section>
     </div>
 
